--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,9 +19,10 @@
         android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_focus_launcher_round"
         android:supportsRtl="true"
+        android:appComponentFactory="111"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning"
-        tools:replace="android:icon,android:roundIcon">
+        tools:replace="android:icon,android:roundIcon,android:appComponentFactory">
         <activity
             android:name=".activity.NewComerActivity"
             android:theme="@style/WelcomeScreenTheme" />
